tests/hulk/errors/syntactic/extra_paren.hulk
let x = 5 in print(x + 1));
